# digipedal

./: .gitignore  .gitmodules  README.md  asset-manifest.json  index.html
backend/: Makefile  effects.c  effects.h  fft.c  loader.c  shorttypes.h  synth.c  wav.c  wav.h
daemon/: Cargo.toml  README.md  default.conf  example_config  install.sh  uninstall.sh
daemon/src/: main.rs
digipedal-app/: .gitignore  README.md  package-lock.json  package.json
digipedal-app/public/: index.html
digipedal-app/src/: App.css  App.js  boards.json  firebaseOperations.js  index.css  jackOperations.js  pedals.json
digipedal-app/src/components/: Board.css  Board.js  DeleteAllPedals.js  GenericInterfaceModal.js  Home.js  InfoModal.css  InfoModal.js  (+12 more)
player/: Cargo.toml
plugins/: README.md
plugins/myAmp/: Makefile  manifest.ttl  myAmp.c  myAmp.ttl
pybackend/: PreExperiment.py  README.md  boards.json  effects.py  helppage.py  pedals.json
static/css/: main.0f612fc5.css  main.0f612fc5.css.map  main.2b6d3795.css  main.2b6d3795.css.map  main.4cd5637f.css  main.4cd5637f.css.map  main.96b10460.css  main.96b10460.css.map  main.fb9ff387.css  main.fb9ff387.css.map
static/js/: 453.a2cfe05c.chunk.js  453.a2cfe05c.chunk.js.map  main.11649602.js  main.11649602.js.map  main.17f4a8fa.js  main.17f4a8fa.js.map  main.281b308b.js  main.3541bbfc.js  main.43fcbb18.js  main.5dfb8dd5.js  main.76668660.js  main.7e1dab44.js  main.82d7fb7f.js  main.a85b865a.js  main.c20b4cae.js  main.d32f2f6e.js  main.de304799.js  main.eabbbf05.js  main.ee95283c.js  main.ee95283c.js.LICENSE.txt  main.f823b293.js
(+14 files in other folders)
