[package]
name = "player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
jack = "0.11.4"
daemonize = "0.5.0"
simplelog = "0.12.2"
log = "0.4.21"
serde_json = "1.0.115"
serde = "1.0.197"
json = "0.12.4"
url = "2.5.0"
turtle-syntax = "6.0.0"
walkdir = "2.5.0"
